# pix-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  pixtool-reference.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs  security.rs
src/pix/: mod.rs  pixtool.rs
src/tools/: analysis.rs  capture.rs  launch.rs  mod.rs  prompts.rs  resources.rs  status.rs  workflow.rs
tests/: mcp_stdio.rs
