[package]
name = "pix-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server for debugging DirectX 12 apps with Microsoft PIX"
license = "MIT"
authors = ["Alessandro Pozone <alessandro.pozone@hotmail.com>"]
repository = "https://github.com/pozlabs/pix-mcp"
homepage = "https://github.com/pozlabs/pix-mcp"
readme = "README.md"
keywords = ["mcp", "pix", "directx12", "gpu", "debugging"]
categories = ["development-tools::debugging", "command-line-utilities", "graphics"]

[dependencies]
# Official Model Context Protocol SDK (server + stdio transport + schema generation + elicitation)
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars", "elicitation"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 encoding for inline image content
base64 = "0.22"

# PNG decode/resize for screenshot thumbnails returned as image content
image = { version = "0.25", default-features = false, features = ["png"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows APIs (used for the elevation check in pix_status)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

[[bin]]
name = "pix-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
